--- a/app/views/framework_views/parts/basic_input_text.scala.html
+++ b/app/views/framework_views/parts/basic_input_text.scala.html
@@ -19,8 +19,8 @@
 @import commons._
 @import framework_views.parts
 <div class="form-group @if(field.hasErrors) {has-error}">
-	<label class="control-label" for="@field.id">@(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
-	<input class="form-control" type="text" id="@field.id" name="@field.name" value="@field.value"/>
+    <label class="control-label" for="@field.id">@(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
+    <input class="form-control" type="text" id="@field.id" name="@field.name" value="@field.value" data-primitive="true"/>
     <span class="help-block"><strong>@{field.error.map { error => parts.Msg(error.message) }}</strong></span>
 </div>
 @***********************************************************
